force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/EA_Kanban_Card_Line_1__c.field-meta.xml
<CustomField>
    <fullName>EA_Kanban_Card_Line_1__c</fullName>
    <formula>&quot;Deadline - &quot; &amp; TEXT( MPM4_BASE__Deadline__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field Used for Kanban Line 1</inlineHelpText>
    <label>EA Kanban Card Line 1</label>
    <type>Text</type>
</CustomField>