force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/EA_Kanban_Line_2__c.field-meta.xml
<CustomField>
    <fullName>EA_Kanban_Line_2__c</fullName>
    <formula>&quot;Total Open Tasks - &quot; &amp;  TEXT(MPM4_BASE__Total_Open_Tasks__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field Used for Kanban Card Layout</inlineHelpText>
    <label>EA Kanban Line 2</label>
    <type>Text</type>
</CustomField>