force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/EA_Kanban_Line_3__c.field-meta.xml
<CustomField>
    <fullName>EA_Kanban_Line_3__c</fullName>
    <description>ield Used for Kanban Card Layout</description>
    <formula>&quot;Estimated Hours from Tasks - &quot; &amp; TEXT( MPM4_BASE__Estimated_Hours_From_Tasks__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field Used for Kanban Card Layout</inlineHelpText>
    <label>EA Kanban Line 3</label>
    <type>Text</type>
</CustomField>