force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/EA_Kanban_Line_4__c.field-meta.xml
<CustomField>
    <fullName>EA_Kanban_Line_4__c</fullName>
    <description>Field Used for Kanban Card Layout</description>
    <formula>&quot; Total Late Tasks - &quot; &amp; Text( MPM4_BASE__Total_Late_Tasks__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field Used for Kanban Card Layout</inlineHelpText>
    <label>EA Kanban Line 4</label>
    <type>Text</type>
</CustomField>