force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/Milestone_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Milestone_External_Id__c</fullName>
    <displayFormat>MSN-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Milestone External Id</label>
    <type>AutoNumber</type>
</CustomField>