force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/Milestone_Stage__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Stage__c</fullName>
    <label>Milestone Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
                <default>true</default>
                <label>Planning</label>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Finalize Closure</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>