force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Actual_Hours_From_Sub_Milestones__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Actual_Hours_From_Sub_Milestones__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Calculated from time records related to tasks on child milestones. Please Note: This field will not be calculated if the &apos;Parent Milestone&apos; lookup field is not used.</inlineHelpText>
    <label>Actual Hours From Sub-Milestones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>