force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Complete_Tasks_in_Sub_Milestones__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Complete_Tasks_in_Sub_Milestones__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of complete tasks related to sub-milestones. Please Note: This field will not be calculated if the &apos;Parent Milestone&apos; lookup field is not used.</inlineHelpText>
    <label>Complete Tasks (in Sub-Milestones)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>