force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Expense_From_Completed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Expense_From_Completed_Tasks__c</fullName>
    <inlineHelpText>Total expenses belonging to completed tasks for this Milestone.</inlineHelpText>
    <label>Expenses From Completed Tasks</label>
    <summarizedField>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Total_Expense__c</summarizedField>
    <summaryFilterItems>
        <field>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Complete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>