force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Percent_Complete__c</fullName>
    <formula>IF(AND( MPM4_BASE__Total_Open_Tasks__c == 0, MPM4_BASE__Total_Complete_Tasks__c == 0),0,( MPM4_BASE__Total_Task_Percentage__c /(MPM4_BASE__Total_Open_Tasks__c + MPM4_BASE__Total_Complete_Tasks__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>