force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Total_Task_Percentage__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Total_Task_Percentage__c</fullName>
    <label>Total Task Percentage</label>
    <summarizedField>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Percent_Complete__c</summarizedField>
    <summaryFilterItems>
        <field>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Cancelled__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>