force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/MPM4_BASE__Weekday_Duration__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Weekday_Duration__c</fullName>
    <label>Workday Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>