force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned Resource who might be user or contact.</description>
    <inlineHelpText>Assigned Resource who might be user or contact.</inlineHelpText>
    <label>Resource</label>
    <referenceTo>MPM4_BASE__Milestone1_Resource__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>