force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/Total_Allocated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocated_Hours__c</fullName>
    <description>Sum of Estimated hours from all the tasks for this milestone.</description>
    <inlineHelpText>Sum of Estimated hours from all the tasks for this milestone</inlineHelpText>
    <label>Total Allocated Hours</label>
    <summarizedField>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Estimated_Hours__c</summarizedField>
    <summaryForeignKey>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>