force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Total cost for this milestone</description>
    <inlineHelpText>Total cost for this milestone</inlineHelpText>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>