force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/Total_Milestone_Margin__c.field-meta.xml
<CustomField>
    <fullName>Total_Milestone_Margin__c</fullName>
    <description>Difference b/w Total Revenue and Total Cost</description>
    <formula>Total_Revenue__c - Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference b/w Total Revenue and Total Cost</inlineHelpText>
    <label>Total Milestone Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>