force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <description>Total Billable Amount of Submitted or Approved Resource Timelines.</description>
    <inlineHelpText>Total Billable Amount of Submitted or Approved Resource Timelines.</inlineHelpText>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>