force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/fields/Total_Time_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Submitted__c</fullName>
    <description>Total time submitted for this milestone</description>
    <inlineHelpText>Total time submitted for this milestone</inlineHelpText>
    <label>Total Time Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>