force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/validationRules/MPM4_BASE__Kickoff_after_Predecessor_Deadline.validationRule-meta.xml
<ValidationRule>
    <fullName>MPM4_BASE__Kickoff_after_Predecessor_Deadline</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNULL(MPM4_BASE__Kickoff__c)) &amp;&amp; NOT(ISNULL(MPM4_BASE__Predecessor_Milestone__r.MPM4_BASE__Deadline__c)) &amp;&amp; MPM4_BASE__Kickoff__c &lt; MPM4_BASE__Predecessor_Milestone__r.MPM4_BASE__Deadline__c</errorConditionFormula>
    <errorDisplayField>MPM4_BASE__Kickoff__c</errorDisplayField>
    <errorMessage>Milestone Kickoff must not be earlier than its Predecessor&apos;s Deadline.</errorMessage>
</ValidationRule>