force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/listViews/MPM4_BASE__All.listView-meta.xml
<ListView>
    <fullName>MPM4_BASE__All</fullName>
    <columns>NAME</columns>
    <columns>MPM4_BASE__Parent_Milestone__c</columns>
    <columns>MPM4_BASE__Project__c</columns>
    <columns>MPM4_BASE__Deadline__c</columns>
    <columns>Milestone_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MPM4_BASE__Complete__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>MPM4_BASE__Project__c</field>
        <operation>equals</operation>
        <value>Carilion Clinic Managed Services - 2022 - 23</value>
    </filters>
    <label>All</label>
</ListView>