force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/listViews/MPM4_BASE__My_Milestones.listView-meta.xml
<ListView>
    <fullName>MPM4_BASE__My_Milestones</fullName>
    <columns>MPM4_BASE__Project__c</columns>
    <columns>NAME</columns>
    <columns>Milestone_External_Id__c</columns>
    <columns>MPM4_BASE__Deadline__c</columns>
    <columns>MPM4_BASE__Total_Open_Tasks__c</columns>
    <columns>MPM4_BASE__Total_Late_Tasks__c</columns>
    <columns>MPM4_BASE__Total_Blocked_Tasks__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>MPM4_BASE__Parent_Milestone__c</field>
        <operation>equals</operation>
    </filters>
    <label>My Milestones</label>
</ListView>