force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/listViews/Production_Support_August.listView-meta.xml
<ListView>
    <fullName>Production_Support_August</fullName>
    <columns>NAME</columns>
    <columns>MPM4_BASE__Parent_Milestone__c</columns>
    <columns>MPM4_BASE__Project__c</columns>
    <columns>MPM4_BASE__Deadline__c</columns>
    <columns>Milestone_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MPM4_BASE__Complete__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Production Support -- August</label>
</ListView>