force-app/main/default/objects/MPM4_BASE__Milestone1_Milestone__c/listViews/Q3_Sales_Milestones.listView-meta.xml
<ListView>
    <fullName>Q3_Sales_Milestones</fullName>
    <columns>MPM4_BASE__Project__c</columns>
    <columns>NAME</columns>
    <columns>Milestone_Stage__c</columns>
    <columns>MPM4_BASE__Kickoff__c</columns>
    <columns>MPM4_BASE__Actual_Start_Date__c</columns>
    <columns>MPM4_BASE__Deadline__c</columns>
    <columns>MPM4_BASE__Actual_Finish_Date__c</columns>
    <columns>MPM4_BASE__Total_Open_Tasks__c</columns>
    <columns>MPM4_BASE__Total_Late_Tasks__c</columns>
    <columns>MPM4_BASE__Total_Blocked_Tasks__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>MPM4_BASE__Parent_Milestone__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>MPM4_BASE__Project__c</field>
        <operation>startsWith</operation>
        <value>2021 Q3</value>
    </filters>
    <label>Q3 Sales Milestones</label>
</ListView>